# turning-polyhedron-reloaded

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindMyGUI.cmake
data/: DefaultAppearances.xml  DefaultObjectTypes.xml  DefaultTileTypes.xml
data/MyGUI/: FileDialog.layout  InputBox.layout  MessageBox.layout  MessageBoxIcons.xml  MessageBoxLanguage.xml  MyGUI_Core.xml  MyGUI_Fonts.xml  MyGUI_Settings.xml  MyGUI_TestImages.xml  MyGUI_TestPointerImages.xml  MyGUI_TestPointers.xml  MyGUI_TestSkins.xml  MyGUI_TestTemplates.xml  MyGUI_TestTheme.xml
data/MyGUI/Common/Demos/: HelpPanel.layout
data/MyGUI/Common/MessageBox/: MessageBoxLanguageEnglishTag.xml
data/MyGUI/Demos/Demo_Themes/: Themes.layout
data/MyGUI/Layout/: GameScreen.layout  LevelListScreen.layout
data/levels/: ColorZoneMazes.xml  IcePrincess_Levels.xml  lvltest01.xml  lvltest02.xml  unittests.xml
doc/: .gitignore  Doxyfile  SerializationSupport.md  appearance.md  dummy.h  gamelogic.md  mainpage.md  turningsquare.md
jni/src/: Appearance.cpp  Appearance.h  AppearanceMap.cpp  AppearanceMap.h  BaseLayout.cpp  BaseLayout.h  BoxFileLoader.cpp  BoxFileLoader.h  CompressionManager.cpp  CompressionManager.h  ConfigManager.cpp  ConfigManager.h  Cuboid.cpp  Cuboid.h  DropdownListButton.cpp  DropdownListButton.h  EventAction.cpp  EventAction.h  EventDescription.cpp  EventDescription.h  EventHandler.cpp  EventHandler.h  FileDialog.cpp  FileDialog.h  FileSystem.cpp  FileSystem.h  FileSystemInfo.cpp  FileSystemInfo.h  GameManager.cpp  GameManager.h  GameScreen.cpp  GameScreen.h  InputBox.cpp  InputBox.h  Interaction.cpp  Interaction.h  LZMA.cpp  LZMA.h  LZSS.cpp  LZSS.h  (+58 more)
obsolete/: RectanglePacker.cpp  RectanglePacker.h  u8file.cpp  u8file.h
